err/pyfiscalprinter.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyfiscalprinter'...
Compiling './lib/python3.5/site-packages/pyfiscalprinter/epsonFiscal.py'...
***   File "./lib/python3.5/site-packages/pyfiscalprinter/epsonFiscal.py", line 89
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyfiscalprinter/epsonFiscalDriver.py'...
***   File "./lib/python3.5/site-packages/pyfiscalprinter/epsonFiscalDriver.py", line 128
    raise PrinterStatusError, message
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyfiscalprinter/epsonFiscalDriver_service.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (epsonFiscalDriver_service.py, line 17)
Compiling './lib/python3.5/site-packages/pyfiscalprinter/hasarPrinter.py'...
***   File "./lib/python3.5/site-packages/pyfiscalprinter/hasarPrinter.py", line 56
    print "sendCommand", ret, parameters
                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyfiscalprinter/test.py'...
***   File "./lib/python3.5/site-packages/pyfiscalprinter/test.py", line 8
    print "Usando driver de Epson"
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pyfiscalprinter-1.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
